<resources>
    <string name="app_name">Secure Message</string>
    <string name="send_sms">Send SMS</string>
    <string name="send">Send</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_your_message">Enter Your Message....</string>
    <string name="message_count">%1$s | 160</string>
    <string name="received_sms">Received SMS</string>
   <string name="nodata">No Sms Found</string>
   <string name="loading">Loading...</string>
   <string name="sms_sent_successfully">Sms Sent Successfully</string>
   <string name="you_should_enable_the_permission">You Should enable the Permission</string>
</resources>