<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_corner_bg"
    android:paddingBottom="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/TextView.Font.16.Medium.colorPrimary"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/send_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel"
        android:id="@+id/ivCancel"/>

    <View
        android:id="@+id/vwTitle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMobileNumber"
        style="@style/EditText.Font.14.Regular.colorSecondary"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vwTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMessage"
        style="@style/EditText.Font.14.Regular.colorSecondary"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="start|top"
        android:hint="@string/enter_your_message"
        android:maxLength="160"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="@id/etMobileNumber"
        app:layout_constraintStart_toStartOf="@id/etMobileNumber"
        app:layout_constraintTop_toBottomOf="@id/etMobileNumber" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessageCount"
        style="@style/TextView.Font.12.Regular.colorSecondaryVarient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_count"
        app:layout_constraintEnd_toEndOf="@id/etMessage"
        app:layout_constraintTop_toBottomOf="@id/etMessage" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button.Font.14.Medium.colorSecondary"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/send"
        android:id="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="@id/etMobileNumber"
        app:layout_constraintStart_toStartOf="@id/etMobileNumber"
        app:layout_constraintTop_toBottomOf="@id/tvMessageCount"
        app:layout_constraintWidth_percent=".70" />


</androidx.constraintlayout.widget.ConstraintLayout>