<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.sciflare.message.ui.viewmodel.SmsSenderFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SmsSenderFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <include
            android:id="@+id/ilLoader"
            layout="@layout/layout_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNodata"
            style="@style/TextView.Font.14.Medium.colorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fbReceived"
            style="@style/TextView.Font.12.Regular.colorOnSecondary"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/received_sms"
            app:icon="@drawable/ic_received"
            app:iconTint="@color/colorOnSecondary"
            app:layout_constraintBottom_toTopOf="@id/fbSend"
            app:layout_constraintEnd_toEndOf="@id/fbSend" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fbSend"
            style="@style/TextView.Font.12.Regular.colorOnSecondary"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/send_sms"
            app:icon="@drawable/ic_message"
            app:iconTint="@color/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>